--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -2,7 +2,7 @@
 meta:
   name:    nats
   target:  ohio-cf
-  url:     https://ci-ohio.starkandwayne.com
+  url:     https://ci2.starkandwayne.com
 
   initial_version: 1.0.0
 
@@ -16,7 +16,7 @@ meta:
     name:   ((git-commit-name))
 
   aws:
-    bucket:      (( grab meta.pipeline ))
+    bucket:      nats-pipeline
     region_name: us-east-1
     access_key:  ((aws-cfcommunity-access))
     secret_key:  ((aws-cfcommunity-secret))
